# PFERD

./: pyproject.toml
.github/workflows/: build-and-release.yml
PFERD/: logging.py  output_dir.py  pferd.py  transformer.py  version.py
PFERD/auth/: __init__.py  keyring.py
PFERD/cli/: command_ilias_web.py  command_kit_ilias_web.py  command_kit_ipd.py  command_local.py  common_ilias_args.py  parser.py
PFERD/crawl/: __init__.py  crawler.py  http_crawler.py  kit_ipd_crawler.py
PFERD/crawl/ilias/: file_templates.py  ilias_web_crawler.py  kit_ilias_html.py  kit_ilias_web_crawler.py
scripts/: check  setup
